优化性能