@@ -23,6 +23,7 @@ import java.util.regex.Pattern;
  */
 public class Utils {
 
+    static final int CHUNK_SIZE = 50000; // 分割大小
 
     // 对以下URl提取URL
     public final static  List<String> STATIC_URl_EXT = List.of(
@@ -113,28 +114,35 @@ public class Utils {
         if (!html.contains("http")){
             return urlList;
         }
-        Matcher matcher = FIND_URL_FROM_HTML_PATTERN.matcher(html);
-        while (matcher.find()) {
-            String url = matcher.group();
-            if (!url.contains("http") && url.startsWith("/")) {
+        int htmlLength = html.length(); // html文件内容长度
+
+        // 处理每个 CHUNK_SIZE 大小的片段
+        for (int start = 0; start < htmlLength; start += CHUNK_SIZE) {
+            int end = Math.min(start + CHUNK_SIZE, htmlLength);
+            String htmlChunk = html.substring(start, end);
+            Matcher matcher = FIND_URL_FROM_HTML_PATTERN.matcher(htmlChunk);
+            while (matcher.find()) {
+                String url = matcher.group();
+                if (!url.contains("http") && url.startsWith("/")) {
+                    try {
+                        URI baseUri = new URI(uri);
+                        url = baseUri.resolve(url).toString();
+                    } catch (URISyntaxException e) {
+                        continue;
+                    }
+                }
                 try {
-                    URI baseUri = new URI(uri);
-                    url = baseUri.resolve(url).toString();
-                } catch (URISyntaxException e) {
+                    String subdomain = (new URL(uri)).getHost();
+                    String domain = (new URL(url)).getHost();
+                    if (!subdomain.equalsIgnoreCase(domain)) {
+                        continue;
+                    }
+                } catch (Exception e) {
                     continue;
                 }
-            }
-            try{
-                String subdomain = (new URL(uri)).getHost() ;
-                String domain = (new URL(url)).getHost();
-                if (!subdomain.equalsIgnoreCase(domain)){
-                    continue;
+                if (!isStaticFile(url) && !isStaticPathByPath(getPathFromUrl(url)) && !isWhiteDomain(url)) {
+                    urlList.add(url);
                 }
-            } catch (Exception e) {
-                continue;
-            }
-            if (!isStaticFile(url)  && !isStaticPathByPath(getPathFromUrl(url)) && !isWhiteDomain(url)){
-                urlList.add(url);
             }
         }
         return urlList;
@@ -143,36 +151,44 @@ public class Utils {
     public static List<String> findUrl(String url, int port, String host, String protocol, String js)
     {
         // 方式一：原有的正则提取js中的url的逻辑
-        Matcher m = FIND_PAHT_FROM_JS_PATTERN.matcher(js);
-        int matcher_start = 0;
+        int jsLength = js.length(); // JavaScript 文件内容长度
         Set<String> ex_urls = new LinkedHashSet<>();
-        while (m.find(matcher_start)){
-            String matchGroup = m.group(1);
-            if (matchGroup != null){
-                if (!isStaticPathByPath(matchGroup)){
-                    ex_urls.add(matchGroup.replaceAll("\"","").replaceAll("'","").replaceAll("\n","").replaceAll("\t","").trim());
+
+        // 处理每个 CHUNK_SIZE 大小的片段
+        for (int start = 0; start < jsLength; start += CHUNK_SIZE) {
+            int end = Math.min(start + CHUNK_SIZE, jsLength);
+            String jsChunk = js.substring(start, end);
+            Matcher m = FIND_PAHT_FROM_JS_PATTERN.matcher(jsChunk);
+            int matcher_start = 0;
+            while (m.find(matcher_start)){
+                String matchGroup = m.group(1);
+                if (matchGroup != null){
+                    if (!isStaticPathByPath(matchGroup)){
+                        ex_urls.add(matchGroup.replaceAll("\"","").replaceAll("'","").replaceAll("\n","").replaceAll("\t","").trim());
+                    }
+                }
+                matcher_start = m.end();
+            }
+            // 方式二：
+            Matcher matcher_result = FIND_PATH_FROM_JS_PATTERN2.matcher(jsChunk);
+            while (matcher_result.find()){
+                // 检查第一个捕获组
+                String group1 = matcher_result.group(1);
+                if (group1 != null) {
+                    if (!isStaticPathByPath(group1)){
+                        ex_urls.add(group1.trim());
+                    }
+                }
+                // 检查第二个捕获组
+                String group2 = matcher_result.group(2);
+                if (group2 != null) {
+                    if (!isStaticPathByPath(group2)){
+                        ex_urls.add(group2.trim());
+                    }
                 }
             }
-            matcher_start = m.end();
         }
-        // 方式二：
-        Matcher matcher_result = FIND_PATH_FROM_JS_PATTERN2.matcher(js);
-        while (matcher_result.find()){
-            // 检查第一个捕获组
-            String group1 = matcher_result.group(1);
-            if (group1 != null) {
-                if (!isStaticPathByPath(group1)){
-                    ex_urls.add(group1.trim());
-                }
-            }
-            // 检查第二个捕获组
-            String group2 = matcher_result.group(2);
-            if (group2 != null) {
-                if (!isStaticPathByPath(group2)){
-                    ex_urls.add(group2.trim());
-                }
-            }
-        }
+
 
         List<String> all_urls = new ArrayList<>();
         for(String temp_url:ex_urls){
